# systemPY

./: .gitignore  .readthedocs.yaml  HISTORY.md  LICENSE  MANIFEST.in  README.md  manage.py  mkdocs.yml  mypy.ini  pyproject.toml  setup.py  setup_constants.py  setup_mypycify.py
.github/workflows/: pypi-prerelease.yml  pypi-publish.yml  tests-only.yml
_util/: README.md  _cbutil.py
docs/: api-reference.md  getting-started.md  index.md
docs/about/: history.md  roadmap.md
docs/about/marginal_notes/: repl_pain.md
docs/examples/: index.md
docs/examples/primary/: write-me.md
docs/examples/secondary/: celery.md  starlette.md
docs/examples/self-hosted/: asgi-web-app.md  daemon.md  repl.md  script.md  scripting.md
docs/examples/unit/: aiologger.md  redis.md  rodi.md  sqlalchemy.md
docs/first-steps/: installing.md
docs/images/: systempy-favicon.xcf  systempy-logo.xcf
docs/mkdocs_overrides/: main.html  styles.css
examples/: README.md  async_reload_signal.py  ptrepl.py  repl_default.py  sync_reload_signal.py
systemPY/: repl.py  target.py  unit.py
systemPY/util/: callback_plan.py  check.py  extraction.py  misc.py  typing.py
systempy/: __init__.py  daemon.py  loop.py  mypy.py  process.py  repl.py  target.py  target_meta.py  unit.py  unit_meta.py
systempy/ext/: celery.py  pretty_repl.py  ptrepl.py  starlette.py  target_ext.py
systempy/libsystempy/: README.md  __init__.py  callback_plan.py  check.py  check_callback.py  check_subclass.py  class_role.py  constants.py  creation.py  enums.py  extraction.py  handler_type.py  hook_registry.py  local_dataclasses.py  local_typing.py  misc.py  register.py  thread_exception.py  weak_queue.py
systempy/libsystempy/check/: callback.py  subclass.py
systempy/repl/: __init__.py  handle_interrupt.md  handle_interrupt.py  mixins.py  repl.py  typing.py  util.py
systempy/unit/: __init__.py  _compat_signal.py  asgi_server.py  daemon.py  event_wait.py  loop.py  process.py  scripting.py  unit.py
systempy/unit/ext/: celery.py  pretty_repl.py  ptrepl.py  starlette.py  target_ext.py
systempy/unit/repl/: handle_interrupt.py  mixins.py  repl.py  util.py
systempy/util/: __init__.py  callback_plan.py  check.py  configuration.py  constants.py  creation.py  dataclasses.py  enums.py  extraction.py  handler_type.py  hook_registry.py  local_dataclasses.py  local_typing.py  misc.py  register.py  systempy_dataclasses.py  systempy_typing.py  typing.py
tests/: async_reload_signal.py  sync_reload_signal.py  test_async.py  test_basic.py
