[project]
name = "systempy"
version = "0.1.0"
description = "Python application component initialization system"
authors = [{name = "kai3341"}]
readme = "README.md"
requires-python = ">=3.11"

[project.optional-dependencies]
extra = [
    "celery>=5.5.1",
    "ptpython>=3.0.30",
    "starlette>=0.46.2",
]

[tool.pyright]
include = ["systempy/"]
reportMissingModuleSource = false
reportArgumentType = false
reportCallIssue = false
reportAssignmentType = false
reportGeneralTypeIssues = false
reportIndexIssue = false
reportInvalidTypeArguments = false

[tool.ruff.lint]
select=["ALL"]
ignore = ["D", "S101", "TID252", "ANN401", "PTH119", "RET503"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"


[tool.mypy]
python_version = "3.11"
mypy_path = "$MYPY_CONFIG_FILE_DIR/systempy"
disable_error_code = ["import-untyped", "return", "empty-body"]
exclude = ["^build/", "^dist/"]

[dependency-groups]
dev = [
    "mkdocs-material>=9.6.11",
    "mypy[mypyc]>=1.15.0",
    "ruff>=0.11.5",
]
